--- a/accueil.html
+++ b/accueil.html
@@ -3,11 +3,11 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>OCR - LMP</title>
+	<title>Decolor. - OELA</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="OCR - LMP" />
-	<meta name="keywords" content="Accueil OCR - LMP" />
-	<meta name="author" content="LMP" />
+	<meta name="description" content="Decolor. - OELA" />
+	<meta name="keywords" content="Accueil Decolor. - OELA" />
+	<meta name="author" content="OELA" />
 
 	<style>
 		.textcouleurmarron {
@@ -56,13 +56,19 @@
 		<div class="gtco-container">
 			<div class="row">
 				<div class="col-xs-2">
-					<div id="gtco-logo"><a href="accueil.html">OCR-LMP</a></div>
+					<div id="gtco-logo"><a href="accueil.html">Decolor.</a></div>
 				</div>
 				<div class="col-xs-8 text-center menu-1">
 					<ul>
-						<li class="active"><a href="accueil.html">Notre Projet</a></li>
+						<li class="active"><a href="accueil.html">Projet</a></li>
+						<li class="has-dropdown">
+							<a href="avancees.html">avanc&eacute;es</a>
+						</li>
 						<li class="has-dropdown">
 							<a href="documentation.html">Documentation</a>
+						</li>
+						<li class="has-dropdown">
+							<a href="equipe.html">&eacute;quipe</a>
 						</li>
 					</ul>
 				</div>
@@ -84,9 +90,9 @@
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1><span class="textcouleurbeige"></span></h1>
-							<img src="images/LMPintro.png" alt="" height="370pw" width="340px">
-							<h1><span class="textcouleurbeige">OCR - LMP</span></h1>
-							<h2><span class="textcouleurbeige">Les M&eacute;diOCRes PrOCRastinateurs</span></h2>
+							<img src="images/logo-test.png" alt="" height="250pw" width="250px">
+							<h1><span class="textcouleurbeige">DECOLOR</span></h1>
+							<h2><span class="textcouleurbeige">Decolor, le nouvel &eacute;diteur graphique</span></h2>
 						</div>
 					</div>
 				</div>
@@ -215,75 +221,6 @@
 				</div>
 			</div>
 		</div>
-	
-	<div id="gtco-team" class="gtco-section">
-		<div class="gtco-container">
-			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
-					<h2><span class="textcouleurmarron">Notre Equipe</span></h2>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-3 animate-box" data-animate-effect="fadeIn">
-					<div class="gtco-staff">
-						<img src="images/person_1.jpeg" alt="">
-						<h3>Alexandre Devaux-Riviere</h3>
-						<strong class="role">Chef de Projet</strong>
-						<p>D&eacute;veloppement :<br> Intelligence Artificielle,<br>Reconnaissance des Chiffres,<br>Interfaces et Site Web.</p>
-						<ul class="gtco-social-icons">
-							<!-- <li><a href="#"><i class="icon-facebook"></i></a></li> -->
-							<li><a href="https://twitter.com/_alexandre_dr" target="_blank"><i class="icon-twitter"></i></a></li>
-							<!--<li><a href="#"><i class="icon-dribbble"></i></a></li>-->
-							<li><a href="https://github.com/TopAgrume" target="_blank"><i class="icon-github"></i></a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-md-3 animate-box" data-animate-effect="fadeIn">
-					<div class="gtco-staff">
-						<img src="images/person_2.png" alt="">
-						<h3>Jules Girod</h3>
-						<strong class="role">Responsable Traitement</strong>
-						<p>D&eacute;veloppement : <br>Traitements de l'image,<br>D&eacute;tection des cases,<br>Rotation automatique.</p>
-						<ul class="gtco-social-icons">
-							<!-- <li><a href="#"><i class="icon-facebook"></i></a></li> -->
-							<!-- <li><a href="https://twitter.com" target="_blank"><i class="icon-twitter"></i></a></li> -->
-							<!--<li><a href="#"><i class="icon-dribbble"></i></a></li>-->
-							<li><a href="https://github.com/jules-girod-EPITA/" target="_blank"><i class="icon-github"></i></a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-md-3 animate-box" data-animate-effect="fadeIn">
-					<div class="gtco-staff">
-						<img src="images/person_3.jpg" alt="">
-						<h3>Esteban Arroyo</h3>
-						<strong class="role">Responsable Interface</strong>
-						<p>D&eacute;veloppement :<br>Traitements de l'image,<br>Reconnaissance des cases,<br>Fonctionnement de l'Interface.</p>
-						<ul class="gtco-social-icons">
-							<!-- <li><a href="#"><i class="icon-facebook"></i></a></li> -->
-							<li><a href="https://twitter.com/esteban71150" target="_blank"><i class="icon-twitter"></i></a></li>
-							<!--<li><a href="#"><i class="icon-dribbble"></i></a></li>-->
-							<li><a href="https://github.com/esteban71" target="_blank"><i class="icon-github"></i></a></li>
-						</ul>
-					</div>
-				</div>
-				
-				<div class="col-md-3 animate-box" data-animate-effect="fadeIn">
-					<div class="gtco-staff">
-						<img src="images/person_4.png" alt="">
-						<h3>Romain Ludet</h3>
-						<strong class="role">Responsable D&eacute;tection</strong>
-						<p>D&eacute;veloppement : <br>Traitements de l'image,<br>D&eacute;tection de la grille,<br>Redimension de l'image.</p>
-						<ul class="gtco-social-icons">
-							<!-- <li><a href="#"><i class="icon-facebook"></i></a></li> -->
-							<!-- <li><a href="https://twitter.com" target="_blank"><i class="icon-twitter"></i></a></li> -->
-							<!--<li><a href="#"><i class="icon-dribbble"></i></a></li>-->
-							<li><a href="https://github.com/LomainDimensions" target="_blank"><i class="icon-github"></i></a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
 
 	<div id="gtco-counter" class="gtco-bg gtco-counter" style="background-image:url(images/img_bg_1.jpg);">
 		<div class="gtco-container">
