--- a/avancees.html
+++ b/avancees.html
@@ -66,19 +66,19 @@
 		<div class="gtco-container">
 			<div class="row">
 				<div class="col-xs-2">
-					<div id="gtco-logo"><a href="accueil.html">Decolor. - OELA</a></div>
+					<div id="gtco-logo"><a href="accueil.html">Decolor.</a></div>
 				</div>
 				<div class="col-xs-8 text-center menu-1">
 					<ul>
 						<li class="has-dropdown"><a href="accueil.html">Projet</a></li>
 						<li class="active">
-							<a href="avancees.html">avancées</a>
+							<a href="avancees.html">avanc&eacute;es</a>
 						</li>
 						<li class="has-dropdown">
 							<a href="documentation.html">Documentation</a>
 						</li>
 						<li class="has-dropdown">
-							<a href="equipe.html">équipe</a>
+							<a href="equipe.html">&eacute;quipe</a>
 						</li>
 					</ul>
 				</div>
@@ -96,7 +96,8 @@
 
 	<header id="gtco-header" class="gtco-cover gtco-cover-sm" role="banner" style="background-image:url(images/img_bg_4.jpg);">
 		<center>
-			<img src="images/alpha.png" alt="" height="600" width="600">
+		<br><br><br><br>
+			<img src="images/OELA.png" alt="" height="400" width="400">
 		</center>
 	</header>
 
@@ -113,12 +114,13 @@
 			<i class="icon fa fa-home"></i>
 			<div class="content" style="margin-left: -220px;">
 				<h2><b>Peaufinage du projet</b></h2>
-				<p>
+				<p><!--
 					Impl&eacute;mentation de nombreuses nouvelles maps et organisation de celles-ci.<br>
 					Ajout d'un systeme d'arbre de talents.<br>
 					Correction d'un systeme de sauvegarde.<br>
 					Mise en place d'un installateur pour le jeu.<br>
 					Cr&eacute;ation d'un etui/d'une jaquette de pr&eacute;sentation du jeu.<br>
+					!-->
 				</p>
 			</div>
 		</div>
@@ -128,11 +130,13 @@
 			<div class="content" style="margin-right: -220px;">
 				<h2><b>Patch de correction multijoueur</b></h2>
 				<p>
+					<!--
 					Cr&eacute;ation d'un matchmaking fonctionnel pour le multijoueur.<br>
 					Synchronisation des d&eacute;placements et des attaques.<br>
 					Impl&eacute;mentations d'&eacute;l&eacute;ments relatifs au mode de Jeu.<br>
 					Synchronisation des musiques et des sons entre les clients.<br>
 					Correction des bugs d&eacute;t&eacute;ct&eacute;s.<br>
+					!-->
 				</p>
 			</div>
 		</div>
@@ -142,12 +146,14 @@
 			<div class="content" style="margin-left: -220px;">
 				<h2><b>Consolidation des &eacute;l&eacute;ments du Jeu</b></h2>
 				<p>
+					<!--
 					Impl&eacute;mentation d'un syst&egrave;me de combat et d'attaque &agrave; 3 armes et d'un Dash.<br>
 					Ajout du systeme raccourci d'activit&eacute; synchronis&eacute; avec discord.<br>
 					Ajout systeme de porte/cl&eacute; pour voyager &agrave; travers les niveaux.<br>
 					Impl&eacute;mentation des effets de lumiere.<br>
 					Impl&eacute;mentation de diff&eacute;rents ennemis comme le chevalier, l'archer...<br>
 					<b>DEUXIEME SOUTENANCE</b>.
+					!-->
 				</p>
 			</div>
 		</div>
@@ -157,9 +163,11 @@
 			<div class="content" style="margin-right: -220px;">
 				<h2><b>Ouverture de notre site internet</b></h2>
 				<p>
+					<!--
 					Cr&eacute;ation d'un site internet gr&acirc;ce a github pour pr&eacute;senter le projet et le groupe.<br>
 					Impl&eacute;mentation de nouvelles cartes cr&eacute;ation de notre premi&egrave;re IA Pathfinding.<br>
 					Cr&eacute;ation d'un barre de vie pour le joueur et mise en place de sa capacit&eacute; &agrave; prendre des d&eacute;gats.<br>
+					!-->
 				</p>
 			</div>
 		</div>
@@ -169,11 +177,13 @@
 			<div class="content" style="margin-left: -220px;">
 				<h2><b>Ajout d'une partie multijoueur avec Photon</b></h2>
 				<p>
+					<!--
 					Impl&eacute;mentation d'un lobby multijoueur pour cr&eacute;er et rejoindre des salles.<br>
 					Ouverture d'un compte Twitter pour faire suivre l'avancement du projet.<br>
 					Inspiration d'autre jeu comme Celeste, HolowKnights et The Binding Of Isaac.<br>
 					Creation d'un logo pour ERASED.<br>
 					<b>PREMIERE SOUTENANCE.</b><br>
+					!-->
 				</p>
 			</div>
 		</div>
@@ -183,11 +193,13 @@
 			<div class="content" style="margin-right: -220px;">
 				<h2><b>Cr&eacute;ation d'un repository Unity Collaborate</b></h2>
 				<p>
+					<!--
 					Utilisation de Unity Collab pr&eacute;f&eacute;r&eacute;e &agrave; celle de GitHub.<br>
 					pour mettre en commun le travail facilement.<br>
 					R&eacute;partition des t&acirc;ches et &eacute;quillibrage du travail.<br>
 					Impl&eacute;mentation du premier personnage capable seulement de se d&eacute;placer.<br>
 					Impl&eacute;mentation du premier niveau test.<br>
+					!-->
 				</p>
 			</div>
 		</div>
@@ -214,7 +226,9 @@
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<center>
+							<!--
 								<img src="images/alpha2.png" alt="" height="400" width="400">
+							!-->
 							</center>
 						</div>
 					</div>
