--- a/documentation.html
+++ b/documentation.html
@@ -3,11 +3,11 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>OCR - LMP</title>
+	<title>Decolor. - OELA</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Documentation OCR - LMP" />
-	<meta name="keywords" content="Documentation OCR - LMP" />
-	<meta name="author" content="LMP" />
+	<meta name="description" content="Decolor. - OELA" />
+	<meta name="keywords" content="Accueil Decolor. - OELA" />
+	<meta name="author" content="OELA" />
 
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
@@ -55,13 +55,19 @@
 		<div class="gtco-container">
 			<div class="row">
 				<div class="col-xs-2">
-					<div id="gtco-logo"><a href="accueil.html">OCR-LMP</a></div>
+					<div id="gtco-logo"><a href="accueil.html">Decolor.</a></div>
 				</div>
 				<div class="col-xs-8 text-center menu-1">
 					<ul>
-						<li><a href="accueil.html">Notre Projet</a></li>
+						<li class="has-dropdown"><a href="accueil.html">Projet</a></li>
+						<li class="has-dropdown">
+							<a href="avancees.html">avanc&eacute;es</a>
+						</li>
 						<li class="active">
 							<a href="documentation.html">Documentation</a>
+						</li>
+						<li class="has-dropdown">
+							<a href="equipe.html">&eacute;quipe</a>
 						</li>
 					</ul>
 				</div>
@@ -102,11 +108,21 @@
 				<div class="col-md-3 col-sm-3 animate-box" data-animate-effect="fadeIn">
 					<div class="feature-center">
 						<span class="icon">
-							<i class="icon-text-document"></i>
+							<i class="icon-folder-images"></i>
 						</span>
 						<h3>Soutenance 1</h3>
-						<p>Mise au point sur l'&eacute;tat de l'avancement pour le premier palier (pr&ecirc;t)</p>
-						<p><a href="pdf/rapport_1.pdf" target="_blank" class="btn btn-primary">Lire</a></p>
+						<p>Document essentiel &agrave; l'&eacute;laboration et la r&eacute;alisation du logiciel Decolor</p>
+						<p><a href="pdf/Cahier_des_Charges___OELA.pdf" target="_blank" class="btn btn-primary">Lire</a></p>
+					</div>
+				</div>
+				<div class="col-md-3 col-sm-3 animate-box" data-animate-effect="fadeIn">
+					<div class="feature-center">
+						<span class="icon">
+							<i class="icon-text-document"></i>
+						</span>
+						<h3>Soutenance 2</h3>
+						<p>Mise au point sur l'&eacute;tat de l'avancement pour le premier palier (en attente)</p>
+						<p><a href="#" target="_blank" class="btn btn-primary">Lire</a></p>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-3 animate-box" data-animate-effect="fadeIn">
@@ -114,19 +130,9 @@
 						<span class="icon">
 							<i class="icon-trophy"></i>
 						</span>
-						<h3>Soutenance 2</h3>
-						<p>Mise au point sur l'&eacute;tat de l'avancement pour le dernier palier (pr&ecirc;t)</p>
-						<p><a href="pdf/rapport_2.pdf" target="_blank" class="btn btn-primary">Lire</a></p>
-					</div>
-				</div>
-				<div class="col-md-3 col-sm-3 animate-box" data-animate-effect="fadeIn">
-					<div class="feature-center">
-						<span class="icon">
-							<i class="icon-code"></i>
-						</span>
 						<h3>Visual Studio</h3>
-						<p>Editeur de code<br>et de fichiers<br>pour le d&eacute;veloppement</p>
-						<p><a href="https://code.visualstudio.com/" target="_blank" class="btn btn-primary">Visual Studio</a></p>
+						<p>Mise au point sur l'&eacute;tat de l'avancement pour le dernier palier (en attente)</p>
+						<p><a href="#" target="_blank" class="btn btn-primary">Lire</a></p>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-3 animate-box" data-animate-effect="fadeIn">
@@ -135,8 +141,8 @@
 							<i class="icon-network"></i>
 						</span>
 						<h3>Github</h3>
-						<p>Gestionaire version,<br>stockage de l'OCR<br>et h&eacute;bergeur du site</p>
-						<p><a href="https://github.com/" target="_blank" class="btn btn-primary">Github</a></p>
+						<p>Gestionaire version,<br>stockage des fichiers et du site du logiciel Decolor</p>
+						<p><a href="https://github.com/TopAgrume/decolor" target="_blank" class="btn btn-primary">Repository</a></p>
 					</div>
 				</div>
 
@@ -144,20 +150,6 @@
 		</div>
 	</div>
 
-	
-	<div class="gtco-cover gtco-cover-sm" style="background-image:url(images/img_bg_3.jpg);">
-		<div class="overlay"></div>
-		<div class="gtco-container">
-			<div class="row">
-				<div class="col-md-8 col-md-offset-2 text-center">
-					<div class="display-t">
-						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
 	
 	<div id="gtco-testimonial">
 		<div class="gtco-container">
@@ -168,20 +160,7 @@
 					</div>
 				</div>
 				<div class="row animate-box">
-					
-				
 					<div class="owl-carousel owl-carousel-fullwidth ">
-						<div class="item">
-							<div class="testimony-slide active text-center">
-								<figure>
-									<img src="images/unity.jpeg" alt="">
-								</figure>
-								<span>Moteur de jeu,<br> et gestionnaire version</span>
-								<blockquote>
-									<p><a href="https://unity.com/" target="_blank" class="btn btn-primary">Unity</a></p>
-								</blockquote>
-							</div>
-						</div>
 						<div class="item">
 							<div class="testimony-slide active text-center">
 								<figure>
@@ -196,44 +175,11 @@
 						<div class="item">
 							<div class="testimony-slide active text-center">
 								<figure>
-									<img src="images/rider.jpeg" alt="">
+									<img src="images/logo-vim.png" alt="">
 								</figure>
 								<span>Editeur de code<br>et de fichiers</span>
 								<blockquote>
-									<p><a href="https://www.jetbrains.com/rider/" target="_blank" class="btn btn-primary">Rider</a></p>
-								</blockquote>
-							</div>
-						</div>
-						<div class="item">
-							<div class="testimony-slide active text-center">
-								<figure>
-									<img src="images/gimp.jpeg" alt="">
-								</figure>
-								<span>Editeur Graphique<br>pour erased et notre site</span>
-								<blockquote>
-									<p><a href="https://www.gimp.org/" target="_blank" class="btn btn-primary">GIMP</a></p>
-								</blockquote>
-							</div>
-						</div>
-						<div class="item">
-							<div class="testimony-slide active text-center">
-								<figure>
-									<img src="images/audacity.jpeg" alt="">
-								</figure>
-								<span>Composition et<br>enregistrement audio</span>
-								<blockquote>
-									<p><a href="https://www.audacityteam.org/" target="_blank" class="btn btn-primary">Audacity</a></p>
-								</blockquote>
-							</div>
-						</div>
-						<div class="item">
-							<div class="testimony-slide active text-center">
-								<figure>
-									<img src="images/overleaf.jpeg" alt="">
-								</figure>
-								<span>Editeur de texte<br>documents et rendus</span>
-								<blockquote>
-									<p><a href="https://www.overleaf.com/" target="_blank" class="btn btn-primary">Overleaf</a></p>
+									<p><a href="https://www.vim.org/" target="_blank" class="btn btn-primary">Vim</a></p>
 								</blockquote>
 							</div>
 						</div>
@@ -251,7 +197,7 @@
 						<div class="item">
 							<div class="testimony-slide active text-center">
 								<figure>
-									<img src="images/discord_logo.png" alt="">
+									<img src="images/discord-logo.png" alt="">
 								</figure>
 								<span>Communication &agrave;<br>distance</span>
 								<blockquote>
@@ -262,22 +208,33 @@
 						<div class="item">
 							<div class="testimony-slide active text-center">
 								<figure>
-									<img src="images/paint3d_logo.png" alt="">
+									<img src="images/logo-overleaf.png" alt="">
 								</figure>
-								<span>Editeur Graphique<br>pour erased et notre site</span>
+								<span>Editeur de texte<br>documents et rendus</span>
 								<blockquote>
-									<p><a href="https://www.microsoft.com/en-us/p/paint-3d/9nblggh5fv99?activetab=pivot:overviewtab" target="_blank" class="btn btn-primary">Paint3D</a></p>
+									<p><a href="https://www.overleaf.com/" target="_blank" class="btn btn-primary">Overleaf</a></p>
 								</blockquote>
 							</div>
 						</div>
 						<div class="item">
 							<div class="testimony-slide active text-center">
 								<figure>
-									<img src="images/hitfilm_logo.png" alt="">
+									<img src="images/logo-gtk.png" alt="">
 								</figure>
-								<span>Editeur Vid&eacute;o</span>
+								<span>Librairie GTK pour le langage C</span>
 								<blockquote>
-									<p><a href="https://fxhome.com/" target="_blank" class="btn btn-primary">HitFilm</a></p>
+									<p><a href="https://www.gtk.org/" target="_blank" class="btn btn-primary">Lib. GTK</a></p>
+								</blockquote>
+							</div>
+						</div>
+						<div class="item">
+							<div class="testimony-slide active text-center">
+								<figure>
+									<img src="images/sdl-logo.png" alt="">
+								</figure>
+								<span>Librairie SDL pour le langage C</span>
+								<blockquote>
+									<p><a href="https://www.libsdl.org/" target="_blank" class="btn btn-primary">Lib. SDL</a></p>
 								</blockquote>
 							</div>
 						</div>
@@ -285,6 +242,20 @@
 					</div>
 				</div>
 			<!-- </div> -->
+		</div>
+	</div>
+
+	<div class="gtco-cover gtco-cover-sm" style="background-image:url(images/img_bg_3.jpg);">
+		<div class="overlay"></div>
+		<div class="gtco-container">
+			<div class="row">
+				<div class="col-md-8 col-md-offset-2 text-center">
+					<div class="display-t">
+						<div class="display-tc animate-box" data-animate-effect="fadeIn">
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 
