--- a/equipe.html
+++ b/equipe.html
@@ -66,19 +66,19 @@
 		<div class="gtco-container">
 			<div class="row">
 				<div class="col-xs-2">
-					<div id="gtco-logo"><a href="accueil.html">Decolor. - OELA</a></div>
+					<div id="gtco-logo"><a href="accueil.html">Decolor.</a></div>
 				</div>
 				<div class="col-xs-8 text-center menu-1">
 					<ul>
 						<li class="has-dropdown"><a href="accueil.html">Projet</a></li>
 						<li class="has-dropdown">
-							<a href="avancees.html">avancées</a>
+							<a href="avancees.html">avanc&eacute;es</a>
 						</li>
 						<li class="has-dropdown">
 							<a href="documentation.html">Documentation</a>
 						</li>
 						<li class="active">
-							<a href="equipe.html">équipe</a>
+							<a href="equipe.html">&eacute;quipe</a>
 						</li>
 					</ul>
 				</div>
@@ -92,20 +92,13 @@
 		</div>
 	</nav>
 
-	<header id="gtco-header" class="gtco-cover gtco-cover-sm" role="banner" style="background-image:url(images/img_bg_1.jpg);">
-
-		<div class="gtco-container">
-			<div class="row">
-				<div class="col-md-8 col-md-offset-2 text-center">
-					<div class="display-t">
-						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1><span class="textcouleurbeige">Documents annexes</span></h1>
-							<h2><span class="textcouleurbeige">Mise &agrave; disposition des documents et outils du projet</span></h2>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
+	<header id="gtco-header" class="gtco-cover gtco-cover-sm" role="banner" style="background-image:url(images/img_bg_4.jpg);">
+		<center>
+			<br><br><br><br>
+			<img src="images/OELA.png" alt="" height="400" width="400">
+			
+			<h1><span class="textcouleurbeige">"On Est L&agrave; Alors"</span></h1>
+		</center>
 	</header>
 	
 	<div id="gtco-team" class="gtco-section">
