ADD + Modifs partie équipe / avancées

--- a/avancees.html
+++ b/avancees.html
@@ -109,11 +109,27 @@
 		</div>
 	</div>
 	<div class="timeline">
+		<div class="coontainer right">
+			<div class="date">fin juin</div>
+			<i class="icon fa fa-gift"></i>
+			<div class="content" style="margin-right: -220px;">
+				<h2><b>In progress...</b></h2>
+				<p>
+					<!--
+					Cr&eacute;ation d'un matchmaking fonctionnel pour le multijoueur.<br>
+					Synchronisation des d&eacute;placements et des attaques.<br>
+					Impl&eacute;mentations d'&eacute;l&eacute;ments relatifs au mode de Jeu.<br>
+					Synchronisation des musiques et des sons entre les clients.<br>
+					Correction des bugs d&eacute;t&eacute;ct&eacute;s.<br>
+					!-->
+				</p>
+			</div>
+		</div>
 		<div class="coontainer left">
-			<div class="date">Juin</div>
+			<div class="date">16 Juin</div>
 			<i class="icon fa fa-home"></i>
 			<div class="content" style="margin-left: -220px;">
-				<h2><b>Peaufinage du projet</b></h2>
+				<h2><b>In progress...</b></h2>
 				<p><!--
 					Impl&eacute;mentation de nombreuses nouvelles maps et organisation de celles-ci.<br>
 					Ajout d'un systeme d'arbre de talents.<br>
@@ -125,10 +141,10 @@
 			</div>
 		</div>
 		<div class="coontainer right">
-			<div class="date">Mai</div>
+			<div class="date">1e JUIN</div>
 			<i class="icon fa fa-gift"></i>
 			<div class="content" style="margin-right: -220px;">
-				<h2><b>Patch de correction multijoueur</b></h2>
+				<h2><b>In progress...</b></h2>
 				<p>
 					<!--
 					Cr&eacute;ation d'un matchmaking fonctionnel pour le multijoueur.<br>
@@ -141,10 +157,10 @@
 			</div>
 		</div>
 	    <div class="coontainer left">
-			<div class="date">Avr.</div>
+			<div class="date">16 MAI.</div>
 			<i class="icon fa fa-user"></i>
 			<div class="content" style="margin-left: -220px;">
-				<h2><b>Consolidation des &eacute;l&eacute;ments du Jeu</b></h2>
+				<h2><b>In progress...</b></h2>
 				<p>
 					<!--
 					Impl&eacute;mentation d'un syst&egrave;me de combat et d'attaque &agrave; 3 armes et d'un Dash.<br>
@@ -158,10 +174,10 @@
 			</div>
 		</div>
 		<div class="coontainer right">
-			<div class="date">Mars</div>
+			<div class="date">1e MAI.</div>
 			<i class="icon fa fa-running"></i>
 			<div class="content" style="margin-right: -220px;">
-				<h2><b>Ouverture de notre site internet</b></h2>
+				<h2><b>In progress...</b></h2>
 				<p>
 					<!--
 					Cr&eacute;ation d'un site internet gr&acirc;ce a github pour pr&eacute;senter le projet et le groupe.<br>
@@ -172,10 +188,10 @@
 			</div>
 		</div>
 		<div class="coontainer left">
-			<div class="date">F&eacute;v.</div>
+			<div class="date">16 AVR.</div>
 			<i class="icon fa fa-cog"></i>
 			<div class="content" style="margin-left: -220px;">
-				<h2><b>Ajout d'une partie multijoueur avec Photon</b></h2>
+				<h2><b>In progress...</b></h2>
 				<p>
 					<!--
 					Impl&eacute;mentation d'un lobby multijoueur pour cr&eacute;er et rejoindre des salles.<br>
@@ -188,10 +204,10 @@
 			</div>
 		</div>
 		<div class="coontainer right">
-			<div class="date">Jan.</div>
+			<div class="date">1e AVR.</div>
 			<i class="icon fa fa-certificate"></i>
 			<div class="content" style="margin-right: -220px;">
-				<h2><b>Cr&eacute;ation d'un repository Unity Collaborate</b></h2>
+				<h2><b>In progress...</b></h2>
 				<p>
 					<!--
 					Utilisation de Unity Collab pr&eacute;f&eacute;r&eacute;e &agrave; celle de GitHub.<br>
@@ -204,15 +220,15 @@
 			</div>
 		</div>
 		<div class="coontainer left">
-			<div class="date">D&eacute;c.</div>
+			<div class="date"> 16 MARS</div>
 			<i class="icon fa fa-cog"></i>
 			<div class="content" style="margin-left: -220px;">
 				<h2><b>Prise en main du projet</b></h2>
 				<p>
-					D&eacute;couverte et Installation de Unity.<br>
-					R&eacute;alisation du cahier des charges et recherche d'id&eacute;es de jeu en 2D.<br>
-					Choix de l'orientation sc&eacute;naristique du projet.<br>
-					Choix d'assets pour notre jeu le visuel de notre jeu.<br>
+					D&eacute;couverte et Installation des d&eacute;tails et outils du projet.<br>
+					Choix de l'orientation technologique et graphique du projet.<br>
+					Choix des futures impl&eacute;mentations pour le prototype "Decolor".<br>
+					R&eacute;alisation d&eacute;taill&eacute;e du cahier des charges. <br>
 				</p>
 			</div>
 		</div>
