--- a/equipe.html
+++ b/equipe.html
@@ -114,7 +114,7 @@
 						<img src="images/person_1.jpeg" alt="">
 						<h3>Alexandre Devaux-Riviere</h3>
 						<strong class="role">Chef de Projet</strong>
-						<p>D&eacute;veloppement :<br> Intelligence Artificielle,<br>Reconnaissance des Chiffres,<br>Interfaces et Site Web.</p>
+						<p>D&eacute;veloppement :<!-- <br> Intelligence Artificielle,<br>Reconnaissance des Chiffres,<br>Interfaces et Site Web.</p>-->
 						<ul class="gtco-social-icons">
 							<!-- <li><a href="#"><i class="icon-facebook"></i></a></li> -->
 							<li><a href="https://twitter.com/_alexandre_dr" target="_blank"><i class="icon-twitter"></i></a></li>
@@ -125,44 +125,44 @@
 				</div>
 				<div class="col-md-3 animate-box" data-animate-effect="fadeIn">
 					<div class="gtco-staff">
-						<img src="images/person_2.png" alt="">
-						<h3>Jules Girod</h3>
-						<strong class="role">Responsable Traitement</strong>
-						<p>D&eacute;veloppement : <br>Traitements de l'image,<br>D&eacute;tection des cases,<br>Rotation automatique.</p>
+						<img src="images/default.jpeg" alt="">
+						<h3>Ka&euml;l Facon</h3>
+						<strong class="role">Responsable Structure Projet</strong>
+						<p>D&eacute;veloppement : <!-- <br>Traitements de l'image,<br>D&eacute;tection des cases,<br>Rotation automatique.</p>-->
 						<ul class="gtco-social-icons">
 							<!-- <li><a href="#"><i class="icon-facebook"></i></a></li> -->
-							<!-- <li><a href="https://twitter.com" target="_blank"><i class="icon-twitter"></i></a></li> -->
+							<li><a href="https://twitter.com" target="_blank"><i class="icon-twitter"></i></a></li>
 							<!--<li><a href="#"><i class="icon-dribbble"></i></a></li>-->
-							<li><a href="https://github.com/jules-girod-EPITA/" target="_blank"><i class="icon-github"></i></a></li>
+							<li><a href="https://github.com/Kael-Facon" target="_blank"><i class="icon-github"></i></a></li>
 						</ul>
 					</div>
 				</div>
 				<div class="col-md-3 animate-box" data-animate-effect="fadeIn">
 					<div class="gtco-staff">
-						<img src="images/person_3.jpg" alt="">
-						<h3>Esteban Arroyo</h3>
-						<strong class="role">Responsable Interface</strong>
-						<p>D&eacute;veloppement :<br>Traitements de l'image,<br>Reconnaissance des cases,<br>Fonctionnement de l'Interface.</p>
+						<img src="images/default.jpeg" alt="">
+						<h3>Mathis Rabouille</h3>
+						<strong class="role">Responsable GTK</strong>
+						<p>D&eacute;veloppement :<!-- <br>Traitements de l'image,<br>Reconnaissance des cases,<br>Fonctionnement de l'Interface.</p>-->
 						<ul class="gtco-social-icons">
 							<!-- <li><a href="#"><i class="icon-facebook"></i></a></li> -->
 							<li><a href="https://twitter.com/esteban71150" target="_blank"><i class="icon-twitter"></i></a></li>
 							<!--<li><a href="#"><i class="icon-dribbble"></i></a></li>-->
-							<li><a href="https://github.com/esteban71" target="_blank"><i class="icon-github"></i></a></li>
+							<li><a href="https://github.com/MathisRabouille" target="_blank"><i class="icon-github"></i></a></li>
 						</ul>
 					</div>
 				</div>
 				
 				<div class="col-md-3 animate-box" data-animate-effect="fadeIn">
 					<div class="gtco-staff">
-						<img src="images/person_4.png" alt="">
-						<h3>Romain Ludet</h3>
-						<strong class="role">Responsable D&eacute;tection</strong>
-						<p>D&eacute;veloppement : <br>Traitements de l'image,<br>D&eacute;tection de la grille,<br>Redimension de l'image.</p>
+						<img src="images/default.jpeg" alt="">
+						<h3>Gr&eacute;goire Vest</h3>
+						<strong class="role">Responsable SDL</strong>
+						<p>D&eacute;veloppement : <!-- <br>Traitements de l'image,<br>D&eacute;tection de la grille,<br>Redimension de l'image.</p>-->
 						<ul class="gtco-social-icons">
 							<!-- <li><a href="#"><i class="icon-facebook"></i></a></li> -->
-							<!-- <li><a href="https://twitter.com" target="_blank"><i class="icon-twitter"></i></a></li> -->
+							<li><a href="https://twitter.com" target="_blank"><i class="icon-twitter"></i></a></li>
 							<!--<li><a href="#"><i class="icon-dribbble"></i></a></li>-->
-							<li><a href="https://github.com/LomainDimensions" target="_blank"><i class="icon-github"></i></a></li>
+							<li><a href="https://github.com/Nykses" target="_blank"><i class="icon-github"></i></a></li>
 						</ul>
 					</div>
 				</div>
